--- a/package.json
+++ b/package.json
@@ -43,16 +43,16 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "verbum",
-  "author": "Ozan Yurtsever",
-  "module": "dist/verbum.esm.js",
+  "name": "poli-edit",
+  "author": "Tahsin Alpaydın",
+  "module": "dist/poli-edit.esm.js",
   "size-limit": [
     {
-      "path": "dist/verbum.cjs.production.min.js",
+      "path": "dist/poli-edit.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/verbum.esm.js",
+      "path": "dist/poli-edit.esm.js",
       "limit": "10 KB"
     }
   ],
